Fixed parts of popup dialogues being impossible to reach when the dialogue was too big.

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
 .popup
 {
-    position: fixed;
+    position: absolute;
     top: 50px;
     left: 50px;
     background: white;
